# PyLuaLinker

./: .gitignore  Pipfile  README.MD  README.md  Todo Remove  build.ps1  linker.py  main.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml  python-publish.yml
data/: buildscript.json
dependency_tree/: node.py  utils.py
src/: build_data.py  linker.py  main.py
src/PyLuaLinker/: __main__.py  build_data.py  builddata.py  linker.py  main.py  utils.py
src/PyLuaLinker/commands/: build.py  cli.py  new.py
src/PyLuaLinker/dependency_tree/: __init__.py  node.py  tree.py
src/commands/: build.py  new.py
src/dependency_tree/: node.py  tree.py
tests/: LinkingTest.py  context.py  initialization_test.py  test_Linking.py  test_ProjectInitialization.py
tests/project/: buildscript.json  test.lua
tests/project/src/: main.lua  primary.lua  secondary.lua
