[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyLuaLinker"
version = "0.0.1"
authors = [{ name = "Ubus99" }]
description = "A command-line tool for linking Lua projects into a single file"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
